# AgriSnap

./: README.md  main.py  pyproject.toml  replit.nix
.streamlit/: config.toml
assets/: style.css
data/: sample_prices.csv
utils/: database.py  image_processor.py  mock_ml.py  price_analyzer.py  price_predictor.py
