[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.3",
    "openai>=1.63.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.38",
    "statsmodels>=0.14.4",
    "streamlit>=1.42.2",
    "twilio>=9.4.6",
]
